--- a/concept2/scratchpad.ipynb
+++ b/concept2/scratchpad.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "676e814b",
    "metadata": {},
    "outputs": [],
@@ -30,26 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3d128bea",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "f9243111",
    "metadata": {},
    "outputs": [],
    "source": [
     "cn = duckdb.connect()\n",
-    "cn.sql(\"create or replace view v_workouts as select *, filename from read_csv_auto('~/concept2/workouts/*.csv', filename=True)\")"
+    "cn.sql(\"create or replace view v_detail_workouts as select * from read_csv_auto('~/concept2/workouts/*detail*.csv')\")\n",
+    "cn.sql(\"create or replace view v_summary_workouts as select * from read_csv_auto('~/concept2/workouts/*summary*.csv')\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "fdb99e3d",
    "metadata": {},
    "outputs": [
@@ -57,22 +50,85 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "┌────────┬────────────────┬───────────────────┬────────────────┬───────┬────────┬─────────────┬────────────┬───────────────────────────────────────────────────────────────────────────────┐\n",
-      "│ Number │ Time (seconds) │ Distance (meters) │ Pace (seconds) │ Watts │ Cal/Hr │ Stroke Rate │ Heart Rate │                                   filename                                    │\n",
-      "│ int64  │     double     │      double       │     double     │ int64 │ int64  │    int64    │  varchar   │                                    varchar                                    │\n",
-      "├────────┼────────────────┼───────────────────┼────────────────┼───────┼────────┼─────────────┼────────────┼───────────────────────────────────────────────────────────────────────────────┤\n",
-      "│      1 │            0.8 │               3.2 │            0.0 │  NULL │   NULL │        NULL │ NULL       │ /Users/matthewmartin/concept2/workouts/2024-05-03_rowerg_workout_87842857.csv │\n",
-      "│      2 │            2.8 │              11.8 │          130.8 │   156 │    838 │        NULL │ NULL       │ /Users/matthewmartin/concept2/workouts/2024-05-03_rowerg_workout_87842857.csv │\n",
-      "│      3 │            4.8 │              20.4 │          115.7 │   226 │   1077 │          27 │ NULL       │ /Users/matthewmartin/concept2/workouts/2024-05-03_rowerg_workout_87842857.csv │\n",
-      "│      4 │            6.8 │              29.0 │          116.8 │   220 │   1055 │          29 │ NULL       │ /Users/matthewmartin/concept2/workouts/2024-05-03_rowerg_workout_87842857.csv │\n",
-      "│      5 │            8.8 │              37.8 │          118.3 │   211 │   1027 │          25 │ NULL       │ /Users/matthewmartin/concept2/workouts/2024-05-03_rowerg_workout_87842857.csv │\n",
-      "└────────┴────────────────┴───────────────────┴────────────────┴───────┴────────┴─────────────┴────────────┴───────────────────────────────────────────────────────────────────────────────┘\n",
+      "┌────────┬────────────────┬───────────────────┬────────────────┬───────┬────────┬─────────────┬────────────┬────────┬────────────┬──────────────┐\n",
+      "│ Number │ Time (seconds) │ Distance (meters) │ Pace (seconds) │ Watts │ Cal/Hr │ Stroke Rate │ Heart Rate │ season │    date    │ machine_type │\n",
+      "│ int64  │     double     │      double       │     double     │ int64 │ int64  │    int64    │   int64    │ int64  │    date    │   varchar    │\n",
+      "├────────┼────────────────┼───────────────────┼────────────────┼───────┼────────┼─────────────┼────────────┼────────┼────────────┼──────────────┤\n",
+      "│      1 │            0.7 │               2.1 │            0.0 │  NULL │   NULL │        NULL │       NULL │   2024 │ 2024-04-03 │ rowerg       │\n",
+      "│      2 │            2.7 │               8.8 │          169.5 │    72 │    547 │        NULL │       NULL │   2024 │ 2024-04-03 │ rowerg       │\n",
+      "│      3 │            5.2 │              17.1 │          150.1 │   103 │    656 │          27 │       NULL │   2024 │ 2024-04-03 │ rowerg       │\n",
+      "└────────┴────────────────┴───────────────────┴────────────────┴───────┴────────┴─────────────┴────────────┴────────┴────────────┴──────────────┘\n",
+      "\n",
+      "┌──────────────┬────────────┬─────────────────┐\n",
+      "│ machine_type │ stroke_cnt │ avg_stroke_rate │\n",
+      "│   varchar    │   int64    │     double      │\n",
+      "├──────────────┼────────────┼─────────────────┤\n",
+      "│ skierg       │       8414 │           42.07 │\n",
+      "│ rowerg       │      88169 │           26.67 │\n",
+      "└──────────────┴────────────┴─────────────────┘\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "cn.sql(\"from v_workouts limit 5\").show()"
+    "cn.sql(\"from v_detail_workouts limit 3\").show()\n",
+    "\n",
+    "sql = \"\"\"\n",
+    "    select machine_type, count(*) as stroke_cnt\n",
+    "    , round(avg(\"stroke rate\"),2) as avg_stroke_rate\n",
+    "    from v_detail_workouts\n",
+    "    group by 1\n",
+    "\"\"\"\n",
+    "cn.sql(sql).show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "3666554c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┌─────────────┬──────────────┬──────────────┬─────────────────┬─────────────────┐\n",
+      "│ season_year │ machine_type │ total_meters │ avg_drag_factor │ avg_stroke_rate │\n",
+      "│   varchar   │   varchar    │   varchar    │     double      │     double      │\n",
+      "├─────────────┼──────────────┼──────────────┼─────────────────┼─────────────────┤\n",
+      "│ 2025        │ skierg       │ 15522        │            80.4 │            41.6 │\n",
+      "│ 2024        │ rowerg       │ 85997        │          124.13 │            25.0 │\n",
+      "│ Sub Total   │ All Machines │ 85997        │          124.13 │            25.0 │\n",
+      "│ Grand Total │ All Machines │ 1143452      │          121.41 │           28.34 │\n",
+      "│ Sub Total   │ All Machines │ 177200       │          106.91 │           32.74 │\n",
+      "│ Sub Total   │ All Machines │ 880255       │          126.14 │           27.23 │\n",
+      "│ 2026        │ skierg       │ 31100        │            76.9 │            41.6 │\n",
+      "│ 2025        │ rowerg       │ 864733       │          129.89 │           26.06 │\n",
+      "│ 2026        │ rowerg       │ 146100       │           130.0 │           25.92 │\n",
+      "└─────────────┴──────────────┴──────────────┴─────────────────┴─────────────────┘\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sql = \"\"\"\n",
+    "    select \n",
+    "        case \n",
+    "            when grouping(year) = 1 and grouping(machine_type) = 1 then 'Grand Total'\n",
+    "            when grouping(year) = 0 and grouping(machine_type) = 1 then 'Sub Total'\n",
+    "            else cast(year as varchar)\n",
+    "        end as season_year,\n",
+    "        case \n",
+    "            when grouping(machine_type) = 1 then 'All Machines'\n",
+    "            else machine_type\n",
+    "        end as machine_type,\n",
+    "        format('{:,}', sum(meters)) as total_meters,\n",
+    "        round(avg(drag_factor),2) as avg_drag_factor,\n",
+    "        round(avg(stroke_rate),2) as avg_stroke_rate\n",
+    "    from v_summary_workouts\n",
+    "    group by rollup(year, machine_type)\n",
+    "\"\"\"\n",
+    "cn.sql(sql).show()"
    ]
   }
  ],
