--- a/concept2/scratchpad.ipynb
+++ b/concept2/scratchpad.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "f9243111",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "fdb99e3d",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "3666554c",
    "metadata": {},
    "outputs": [
@@ -94,18 +94,29 @@
      "text": [
       "┌─────────────┬──────────────┬──────────────┬─────────────────┬─────────────────┐\n",
       "│ season_year │ machine_type │ total_meters │ avg_drag_factor │ avg_stroke_rate │\n",
-      "│   varchar   │   varchar    │   varchar    │     double      │     double      │\n",
+      "│   varchar   │   varchar    │    int128    │     double      │     double      │\n",
       "├─────────────┼──────────────┼──────────────┼─────────────────┼─────────────────┤\n",
-      "│ 2025        │ skierg       │ 15522        │            80.4 │            41.6 │\n",
-      "│ 2024        │ rowerg       │ 85997        │          124.13 │            25.0 │\n",
-      "│ Sub Total   │ All Machines │ 85997        │          124.13 │            25.0 │\n",
-      "│ Grand Total │ All Machines │ 1143452      │          121.41 │           28.34 │\n",
-      "│ Sub Total   │ All Machines │ 177200       │          106.91 │           32.74 │\n",
-      "│ Sub Total   │ All Machines │ 880255       │          126.14 │           27.23 │\n",
-      "│ 2026        │ skierg       │ 31100        │            76.9 │            41.6 │\n",
-      "│ 2025        │ rowerg       │ 864733       │          129.89 │           26.06 │\n",
-      "│ 2026        │ rowerg       │ 146100       │           130.0 │           25.92 │\n",
+      "│ Sub Total   │ All Machines │       177200 │          106.91 │           32.74 │\n",
+      "│ Grand Total │ All Machines │      1143452 │          121.41 │           28.34 │\n",
+      "│ 2026        │ rowerg       │       146100 │           130.0 │           25.92 │\n",
+      "│ Sub Total   │ All Machines │       880255 │          126.14 │           27.23 │\n",
+      "│ Sub Total   │ All Machines │        85997 │          124.13 │            25.0 │\n",
+      "│ 2025        │ skierg       │        15522 │            80.4 │            41.6 │\n",
+      "│ 2024        │ rowerg       │        85997 │          124.13 │            25.0 │\n",
+      "│ 2026        │ skierg       │        31100 │            76.9 │            41.6 │\n",
+      "│ 2025        │ rowerg       │       864733 │          129.89 │           26.06 │\n",
       "└─────────────┴──────────────┴──────────────┴─────────────────┴─────────────────┘\n",
+      "\n",
+      "┌────────────┬──────────────┬───────┬────────┬─────────┬─────────┬──────────┬─────────────┬─────────────┬───────────────┐\n",
+      "│    date    │ machine_type │ year  │ meters │  time   │  pace   │ calories │ drag_factor │ stroke_rate │ average_watts │\n",
+      "│    date    │   varchar    │ int64 │ int64  │ varchar │ varchar │  int64   │    int64    │    int64    │     int64     │\n",
+      "├────────────┼──────────────┼───────┼────────┼─────────┼─────────┼──────────┼─────────────┼─────────────┼───────────────┤\n",
+      "│ 2024-04-03 │ rowerg       │  2024 │   6000 │ 24:15.6 │ 2:01.3  │      391 │         121 │          28 │           196 │\n",
+      "│ 2024-04-05 │ rowerg       │  2024 │   5000 │ 20:11.1 │ 2:01.1  │      328 │         123 │          29 │           197 │\n",
+      "│ 2024-04-07 │ rowerg       │  2024 │   5020 │ 21:15.9 │ 2:07.0  │      313 │         123 │          23 │           171 │\n",
+      "│ 2024-04-07 │ rowerg       │  2024 │   2000 │ 8:14.6  │ 2:03.6  │      127 │         123 │          25 │           185 │\n",
+      "│ 2024-04-08 │ rowerg       │  2024 │   1000 │ 4:05.0  │ 2:02.5  │       64 │         125 │          26 │           190 │\n",
+      "└────────────┴──────────────┴───────┴────────┴─────────┴─────────┴──────────┴─────────────┴─────────────┴───────────────┘\n",
       "\n"
      ]
     }
@@ -122,13 +133,15 @@
     "            when grouping(machine_type) = 1 then 'All Machines'\n",
     "            else machine_type\n",
     "        end as machine_type,\n",
-    "        format('{:,}', sum(meters)) as total_meters,\n",
+    "        sum(meters) as total_meters,\n",
     "        round(avg(drag_factor),2) as avg_drag_factor,\n",
     "        round(avg(stroke_rate),2) as avg_stroke_rate\n",
     "    from v_summary_workouts\n",
     "    group by rollup(year, machine_type)\n",
     "\"\"\"\n",
-    "cn.sql(sql).show()"
+    "cn.sql(sql).show()\n",
+    "\n",
+    "cn.sql(\"from v_summary_workouts limit 5\").show()"
    ]
   }
  ],
