--- a/concept2/scratchpad.ipynb
+++ b/concept2/scratchpad.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "676e814b",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "f9243111",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "fdb99e3d",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
       "│   varchar    │   int64    │     double      │\n",
       "├──────────────┼────────────┼─────────────────┤\n",
       "│ skierg       │       8414 │           42.07 │\n",
-      "│ rowerg       │      88169 │           26.67 │\n",
+      "│ rowerg       │      88892 │           26.67 │\n",
       "└──────────────┴────────────┴─────────────────┘\n",
       "\n"
      ]
@@ -84,39 +84,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "3666554c",
+   "execution_count": 16,
+   "id": "7dd7a756",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "┌─────────────┬──────────────┬──────────────┬─────────────────┬─────────────────┐\n",
-      "│ season_year │ machine_type │ total_meters │ avg_drag_factor │ avg_stroke_rate │\n",
-      "│   varchar   │   varchar    │    int128    │     double      │     double      │\n",
-      "├─────────────┼──────────────┼──────────────┼─────────────────┼─────────────────┤\n",
-      "│ Sub Total   │ All Machines │       177200 │          106.91 │           32.74 │\n",
-      "│ Grand Total │ All Machines │      1143452 │          121.41 │           28.34 │\n",
-      "│ 2026        │ rowerg       │       146100 │           130.0 │           25.92 │\n",
-      "│ Sub Total   │ All Machines │       880255 │          126.14 │           27.23 │\n",
-      "│ Sub Total   │ All Machines │        85997 │          124.13 │            25.0 │\n",
-      "│ 2025        │ skierg       │        15522 │            80.4 │            41.6 │\n",
-      "│ 2024        │ rowerg       │        85997 │          124.13 │            25.0 │\n",
-      "│ 2026        │ skierg       │        31100 │            76.9 │            41.6 │\n",
-      "│ 2025        │ rowerg       │       864733 │          129.89 │           26.06 │\n",
-      "└─────────────┴──────────────┴──────────────┴─────────────────┴─────────────────┘\n",
+      "┌─────────────┬──────────────┬──────────────┬─────────────────┬─────────────────┬───────────────┬────────────────────┬────────────────┬────────────────────┐\n",
+      "│ season_year │ machine_type │ total_meters │ avg_drag_factor │ avg_stroke_rate │ total_strokes │   total_seconds    │ total_calories │   fat_lbs_burned   │\n",
+      "│   varchar   │   varchar    │    int128    │     double      │     double      │    int128     │       double       │     int128     │       double       │\n",
+      "├─────────────┼──────────────┼──────────────┼─────────────────┼─────────────────┼───────────────┼────────────────────┼────────────────┼────────────────────┤\n",
+      "│ 2026        │ SkiErg       │        31100 │            76.9 │            41.6 │          5517 │             8042.8 │           1871 │ 0.5345714285714286 │\n",
+      "│ Grand Total │ All Machines │      1150452 │          121.46 │           28.33 │         97306 │ 274550.30000000005 │          76601 │             21.886 │\n",
+      "│ 2025        │ RowErg       │       864733 │          129.89 │           26.06 │         72427 │ 205310.50000000003 │          57916 │ 16.547428571428572 │\n",
+      "│ 2025        │ SkiErg       │        15522 │            80.4 │            41.6 │          2897 │             4134.8 │            910 │               0.26 │\n",
+      "│ Sub Total   │ All Machines │        85997 │          124.13 │            25.0 │          1322 │ 20906.399999999994 │           5612 │ 1.6034285714285714 │\n",
+      "│ 2024        │ RowErg       │        85997 │          124.13 │            25.0 │          1322 │ 20906.399999999994 │           5612 │ 1.6034285714285714 │\n",
+      "│ 2026        │ RowErg       │       153100 │           130.0 │           25.93 │         15143 │ 36155.799999999996 │          10292 │ 2.9405714285714284 │\n",
+      "│ Sub Total   │ All Machines │       880255 │          126.14 │           27.23 │         75324 │ 209445.30000000005 │          58826 │  16.80742857142857 │\n",
+      "│ Sub Total   │ All Machines │       184200 │           107.4 │            32.6 │         20660 │            44198.6 │          12163 │  3.475142857142857 │\n",
+      "└─────────────┴──────────────┴──────────────┴─────────────────┴─────────────────┴───────────────┴────────────────────┴────────────────┴────────────────────┘\n",
       "\n",
-      "┌────────────┬──────────────┬───────┬────────┬─────────┬─────────┬──────────┬─────────────┬─────────────┬───────────────┐\n",
-      "│    date    │ machine_type │ year  │ meters │  time   │  pace   │ calories │ drag_factor │ stroke_rate │ average_watts │\n",
-      "│    date    │   varchar    │ int64 │ int64  │ varchar │ varchar │  int64   │    int64    │    int64    │     int64     │\n",
-      "├────────────┼──────────────┼───────┼────────┼─────────┼─────────┼──────────┼─────────────┼─────────────┼───────────────┤\n",
-      "│ 2024-04-03 │ rowerg       │  2024 │   6000 │ 24:15.6 │ 2:01.3  │      391 │         121 │          28 │           196 │\n",
-      "│ 2024-04-05 │ rowerg       │  2024 │   5000 │ 20:11.1 │ 2:01.1  │      328 │         123 │          29 │           197 │\n",
-      "│ 2024-04-07 │ rowerg       │  2024 │   5020 │ 21:15.9 │ 2:07.0  │      313 │         123 │          23 │           171 │\n",
-      "│ 2024-04-07 │ rowerg       │  2024 │   2000 │ 8:14.6  │ 2:03.6  │      127 │         123 │          25 │           185 │\n",
-      "│ 2024-04-08 │ rowerg       │  2024 │   1000 │ 4:05.0  │ 2:02.5  │       64 │         125 │          26 │           190 │\n",
-      "└────────────┴──────────────┴───────┴────────┴─────────┴─────────┴──────────┴─────────────┴─────────────┴───────────────┘\n",
+      "┌──────────┬─────────────────────┬─────────────┬───────────────────────┬─────────────────────┬───────────────────────┬─────────────────────┬───────────────┬───────────────┬─────────────────────┬──────────────┬─────────┬───────────┬──────────┬───────────┬────────────────┬─────────────┬───────┬─────────┬─────────┬─────────┬───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬─────────────────────┬────────┐\n",
+      "│  Log ID  │        Date         │ Description │ Work Time (Formatted) │ Work Time (Seconds) │ Rest Time (Formatted) │ Rest Time (Seconds) │ Work Distance │ Rest Distance │ Stroke Rate/Cadence │ Stroke Count │  Pace   │ Avg Watts │ Cal/Hour │ Total Cal │ Avg Heart Rate │ Drag Factor │  Age  │ Weight  │  Type   │ Ranked  │                                                                                       Comments                                                                                        │    Date Entered     │ season │\n",
+      "│  int64   │      timestamp      │   varchar   │        varchar        │       double        │        varchar        │        int64        │     int64     │     int64     │        int64        │    int64     │ varchar │   int64   │  int64   │   int64   │     int64      │    int64    │ int64 │ varchar │ varchar │ boolean │                                                                                        varchar                                                                                        │      timestamp      │ int64  │\n",
+      "├──────────┼─────────────────────┼─────────────┼───────────────────────┼─────────────────────┼───────────────────────┼─────────────────────┼───────────────┼───────────────┼─────────────────────┼──────────────┼─────────┼───────────┼──────────┼───────────┼────────────────┼─────────────┼───────┼─────────┼─────────┼─────────┼───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┼─────────────────────┼────────┤\n",
+      "│ 87665739 │ 2024-04-28 05:49:00 │ 10000m row  │ 40:32.1               │              2432.1 │ NULL                  │                NULL │         10000 │          NULL │                  26 │         NULL │ 2:01.6  │       195 │      969 │       653 │           NULL │         126 │    38 │ Hwt     │ RowErg  │ true    │ NULL                                                                                                                                                                                  │ 2024-04-28 09:52:53 │   2024 │\n",
+      "│ 87610264 │ 2024-04-26 05:43:00 │ 10:06 row   │ 10:06.6               │               606.6 │ NULL                  │                NULL │          2540 │          NULL │                  24 │         NULL │ 1:59.4  │       206 │     1007 │       169 │           NULL │         126 │    38 │ Hwt     │ RowErg  │ false   │ felt kind of off this morning and was hard to get out of bed. just need to keep working on it. this isn't a setback. I've been going up and up every time and finally needed a reset. │ 2024-04-26 10:03:51 │   2024 │\n",
+      "│ 87541549 │ 2024-04-24 05:59:00 │ 9000m row   │ 36:33.4               │              2193.4 │ NULL                  │                NULL │          9000 │          NULL │                  25 │         NULL │ 2:01.8  │       193 │      965 │       586 │           NULL │         125 │    38 │ Hwt     │ RowErg  │ false   │ NULL                                                                                                                                                                                  │ 2024-04-24 10:02:46 │   2024 │\n",
+      "│ 87433057 │ 2024-04-21 06:13:00 │ 35:00 row   │ 35:00.0               │              2100.0 │ NULL                  │                NULL │          8737 │          NULL │                  24 │         NULL │ 2:00.1  │       202 │      993 │       578 │           NULL │         125 │    38 │ Hwt     │ RowErg  │ false   │ NULL                                                                                                                                                                                  │ 2024-04-21 10:16:38 │   2024 │\n",
+      "│ 87375708 │ 2024-04-19 06:04:00 │ 8000m row   │ 31:49.3               │              1909.3 │ NULL                  │                NULL │          8000 │          NULL │                  25 │         NULL │ 1:59.3  │       206 │     1008 │       533 │           NULL │         125 │    38 │ Hwt     │ RowErg  │ false   │ NULL                                                                                                                                                                                  │ 2024-04-19 10:07:50 │   2024 │\n",
+      "└──────────┴─────────────────────┴─────────────┴───────────────────────┴─────────────────────┴───────────────────────┴─────────────────────┴───────────────┴───────────────┴─────────────────────┴──────────────┴─────────┴───────────┴──────────┴───────────┴────────────────┴─────────────┴───────┴─────────┴─────────┴─────────┴───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴─────────────────────┴────────┘\n",
       "\n"
      ]
     }
@@ -125,19 +125,23 @@
     "sql = \"\"\"\n",
     "    select \n",
     "        case \n",
-    "            when grouping(year) = 1 and grouping(machine_type) = 1 then 'Grand Total'\n",
-    "            when grouping(year) = 0 and grouping(machine_type) = 1 then 'Sub Total'\n",
-    "            else cast(year as varchar)\n",
+    "            when grouping(season) = 1 and grouping(type) = 1 then 'Grand Total'\n",
+    "            when grouping(season) = 0 and grouping(type) = 1 then 'Sub Total'\n",
+    "            else cast(season as varchar)\n",
     "        end as season_year,\n",
     "        case \n",
-    "            when grouping(machine_type) = 1 then 'All Machines'\n",
-    "            else machine_type\n",
+    "            when grouping(type) = 1 then 'All Machines'\n",
+    "            else type\n",
     "        end as machine_type,\n",
-    "        sum(meters) as total_meters,\n",
-    "        round(avg(drag_factor),2) as avg_drag_factor,\n",
-    "        round(avg(stroke_rate),2) as avg_stroke_rate\n",
+    "        sum(\"Work Distance\") as total_meters,\n",
+    "        round(avg(\"Drag Factor\"),2) as avg_drag_factor,\n",
+    "        round(avg(\"Stroke Rate/Cadence\"),2) as avg_stroke_rate\n",
+    "        ,sum(\"Stroke Count\") as total_strokes\n",
+    "        ,sum(\"Work Time (Seconds)\") as total_seconds\n",
+    "        ,sum(\"Total Cal\") as total_calories\n",
+    "        ,sum(\"Total Cal\")/3500 as fat_lbs_burned\n",
     "    from v_summary_workouts\n",
-    "    group by rollup(year, machine_type)\n",
+    "    group by rollup(season, type)\n",
     "\"\"\"\n",
     "cn.sql(sql).show()\n",
     "\n",
