--- a/concept2/scratchpad.ipynb
+++ b/concept2/scratchpad.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "7dd7a756",
    "metadata": {},
    "outputs": [
@@ -92,20 +92,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "┌─────────────┬──────────────┬──────────────┬─────────────────┬─────────────────┬───────────────┬────────────────────┬────────────────┬────────────────────┐\n",
-      "│ season_year │ machine_type │ total_meters │ avg_drag_factor │ avg_stroke_rate │ total_strokes │   total_seconds    │ total_calories │   fat_lbs_burned   │\n",
-      "│   varchar   │   varchar    │    int128    │     double      │     double      │    int128     │       double       │     int128     │       double       │\n",
-      "├─────────────┼──────────────┼──────────────┼─────────────────┼─────────────────┼───────────────┼────────────────────┼────────────────┼────────────────────┤\n",
-      "│ 2026        │ SkiErg       │        31100 │            76.9 │            41.6 │          5517 │             8042.8 │           1871 │ 0.5345714285714286 │\n",
-      "│ Grand Total │ All Machines │      1150452 │          121.46 │           28.33 │         97306 │ 274550.30000000005 │          76601 │             21.886 │\n",
-      "│ 2025        │ RowErg       │       864733 │          129.89 │           26.06 │         72427 │ 205310.50000000003 │          57916 │ 16.547428571428572 │\n",
-      "│ 2025        │ SkiErg       │        15522 │            80.4 │            41.6 │          2897 │             4134.8 │            910 │               0.26 │\n",
-      "│ Sub Total   │ All Machines │        85997 │          124.13 │            25.0 │          1322 │ 20906.399999999994 │           5612 │ 1.6034285714285714 │\n",
-      "│ 2024        │ RowErg       │        85997 │          124.13 │            25.0 │          1322 │ 20906.399999999994 │           5612 │ 1.6034285714285714 │\n",
-      "│ 2026        │ RowErg       │       153100 │           130.0 │           25.93 │         15143 │ 36155.799999999996 │          10292 │ 2.9405714285714284 │\n",
-      "│ Sub Total   │ All Machines │       880255 │          126.14 │           27.23 │         75324 │ 209445.30000000005 │          58826 │  16.80742857142857 │\n",
-      "│ Sub Total   │ All Machines │       184200 │           107.4 │            32.6 │         20660 │            44198.6 │          12163 │  3.475142857142857 │\n",
-      "└─────────────┴──────────────┴──────────────┴─────────────────┴─────────────────┴───────────────┴────────────────────┴────────────────┴────────────────────┘\n",
+      "┌─────────────┬──────────────┬──────────────┬─────────────────┬─────────────────┬───────────────┬───────────────┬────────────────┬────────────────┐\n",
+      "│ season_year │ machine_type │ total_meters │ avg_drag_factor │ avg_stroke_rate │ total_strokes │ total_seconds │ total_calories │ fat_lbs_burned │\n",
+      "│   varchar   │   varchar    │    int128    │     double      │     double      │    int128     │    double     │     int128     │     double     │\n",
+      "├─────────────┼──────────────┼──────────────┼─────────────────┼─────────────────┼───────────────┼───────────────┼────────────────┼────────────────┤\n",
+      "│ 2024        │ RowErg       │        85997 │          124.13 │            25.0 │          1322 │       20906.0 │           5612 │            2.0 │\n",
+      "│ 2025        │ RowErg       │       864733 │          129.89 │           26.06 │         72427 │      205311.0 │          57916 │           17.0 │\n",
+      "│ 2026        │ RowErg       │       153100 │           130.0 │           25.93 │         15143 │       36156.0 │          10292 │            3.0 │\n",
+      "│ 2026        │ SkiErg       │        31100 │            76.9 │            41.6 │          5517 │        8043.0 │           1871 │            1.0 │\n",
+      "│ 2025        │ SkiErg       │        15522 │            80.4 │            41.6 │          2897 │        4135.0 │            910 │            0.0 │\n",
+      "│ Grand Total │ All Machines │      1150452 │          121.46 │           28.33 │         97306 │      274550.0 │          76601 │           22.0 │\n",
+      "│ Sub Total   │ All Machines │        85997 │          124.13 │            25.0 │          1322 │       20906.0 │           5612 │            2.0 │\n",
+      "│ Sub Total   │ All Machines │       880255 │          126.14 │           27.23 │         75324 │      209445.0 │          58826 │           17.0 │\n",
+      "│ Sub Total   │ All Machines │       184200 │           107.4 │            32.6 │         20660 │       44199.0 │          12163 │            3.0 │\n",
+      "└─────────────┴──────────────┴──────────────┴─────────────────┴─────────────────┴───────────────┴───────────────┴────────────────┴────────────────┘\n",
       "\n",
       "┌──────────┬─────────────────────┬─────────────┬───────────────────────┬─────────────────────┬───────────────────────┬─────────────────────┬───────────────┬───────────────┬─────────────────────┬──────────────┬─────────┬───────────┬──────────┬───────────┬────────────────┬─────────────┬───────┬─────────┬─────────┬─────────┬───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬─────────────────────┬────────┐\n",
       "│  Log ID  │        Date         │ Description │ Work Time (Formatted) │ Work Time (Seconds) │ Rest Time (Formatted) │ Rest Time (Seconds) │ Work Distance │ Rest Distance │ Stroke Rate/Cadence │ Stroke Count │  Pace   │ Avg Watts │ Cal/Hour │ Total Cal │ Avg Heart Rate │ Drag Factor │  Age  │ Weight  │  Type   │ Ranked  │                                                                                       Comments                                                                                        │    Date Entered     │ season │\n",
@@ -137,9 +137,9 @@
     "        round(avg(\"Drag Factor\"),2) as avg_drag_factor,\n",
     "        round(avg(\"Stroke Rate/Cadence\"),2) as avg_stroke_rate\n",
     "        ,sum(\"Stroke Count\") as total_strokes\n",
-    "        ,sum(\"Work Time (Seconds)\") as total_seconds\n",
+    "        ,round(sum(\"Work Time (Seconds)\"),0) as total_seconds\n",
     "        ,sum(\"Total Cal\") as total_calories\n",
-    "        ,sum(\"Total Cal\")/3500 as fat_lbs_burned\n",
+    "        ,round(sum(\"Total Cal\")/3500,0) as fat_lbs_burned\n",
     "    from v_summary_workouts\n",
     "    group by rollup(season, type)\n",
     "\"\"\"\n",
