--- a/concept2/scratchpad.ipynb
+++ b/concept2/scratchpad.ipynb
@@ -93,12 +93,12 @@
       "│ 2025        │ All Machines │       880255 │           547 │          126.14 │           27.23 │         75324 │      209445.0 │          58826 │           17.0 │\n",
       "│ 2025        │ RowErg       │       864733 │           537 │          129.89 │           26.06 │         72427 │      205311.0 │          57916 │           17.0 │\n",
       "│ 2025        │ SkiErg       │        15522 │            10 │            80.4 │            41.6 │          2897 │        4135.0 │            910 │            0.0 │\n",
-      "│ 2026        │ All Machines │       184200 │           114 │           107.4 │            32.6 │         20660 │       44199.0 │          12163 │            3.0 │\n",
-      "│ 2026        │ RowErg       │       153100 │            95 │           130.0 │           25.93 │         15143 │       36156.0 │          10292 │            3.0 │\n",
-      "│ 2026        │ SkiErg       │        31100 │            19 │            76.9 │            41.6 │          5517 │        8043.0 │           1871 │            1.0 │\n",
-      "│ All Seasons │ All Machines │      1150452 │           715 │          121.46 │           28.33 │         97306 │      274550.0 │          76601 │           22.0 │\n",
-      "│ All Seasons │ RowErg       │      1103830 │           686 │          129.35 │           25.93 │         88892 │      262373.0 │          73820 │           21.0 │\n",
-      "│ All Seasons │ SkiErg       │        46622 │            29 │           78.07 │            41.6 │          8414 │       12178.0 │           2781 │            1.0 │\n",
+      "│ 2026        │ All Machines │       196700 │           122 │           107.7 │            32.5 │         22211 │       47233.0 │          12988 │            4.0 │\n",
+      "│ 2026        │ RowErg       │       162100 │           101 │           130.0 │           25.93 │         16061 │       38274.0 │          10906 │            3.0 │\n",
+      "│ 2026        │ SkiErg       │        34600 │            21 │            76.9 │           41.57 │          6150 │        8959.0 │           2082 │            1.0 │\n",
+      "│ All Seasons │ All Machines │      1162952 │           723 │          121.32 │           28.37 │         98857 │      277584.0 │          77426 │           22.0 │\n",
+      "│ All Seasons │ RowErg       │      1112830 │           691 │          129.35 │           25.93 │         89810 │      264491.0 │          74434 │           21.0 │\n",
+      "│ All Seasons │ SkiErg       │        50122 │            31 │           78.03 │           41.58 │          9047 │       13094.0 │           2992 │            1.0 │\n",
       "├─────────────┴──────────────┴──────────────┴───────────────┴─────────────────┴─────────────────┴───────────────┴───────────────┴────────────────┴────────────────┤\n",
       "│ 11 rows                                                                                                                                              10 columns │\n",
       "└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘\n",
@@ -107,25 +107,10 @@
     }
    ],
    "source": [
-    "## need to update to use the \"grouping\" function to tag totals and sub totals\n",
-    "\n",
-    "\n",
     "sql = \"\"\"\n",
     "    select \n",
-    "        coalesce(\n",
-    "            cast(season as varchar(30)),\n",
-    "            case \n",
-    "                when season is null then 'All Seasons'\n",
-    "                else cast(season as varchar(30))\n",
-    "            end\n",
-    "        ) as season,\n",
-    "        coalesce(\n",
-    "            type,\n",
-    "            case \n",
-    "                when type is null then 'All Machines'\n",
-    "                else type\n",
-    "            end\n",
-    "        ) as type,\n",
+    "        coalesce(cast(season as varchar(30)), 'All Seasons') as season,\n",
+    "        coalesce(type, 'All Machines') as type,\n",
     "        sum(\"Work Distance\") as total_meters,\n",
     "        round(sum(\"Work Distance\")*0.000621371,0) as total_miles,\n",
     "        round(avg(\"Drag Factor\"),2) as avg_drag_factor,\n",
@@ -149,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f62841b1",
    "metadata": {},
    "outputs": [
@@ -161,16 +146,16 @@
       "│ workout_date │ time_seconds │ distance_meters │ time_mmss │\n",
       "│     date     │    double    │     double      │  varchar  │\n",
       "├──────────────┼──────────────┼─────────────────┼───────────┤\n",
-      "│ 2024-08-08   │       1235.5 │          5000.0 │ 20:36     │\n",
-      "│ 2024-09-18   │       1229.2 │          5005.1 │ 20:29     │\n",
-      "│ 2024-08-01   │       1221.1 │          5002.8 │ 20:21     │\n",
-      "│ 2025-01-09   │       1220.7 │          5007.1 │ 20:21     │\n",
-      "│ 2024-08-15   │       1219.9 │          5007.9 │ 20:20     │\n",
-      "│ 2024-04-03   │       1217.4 │          5006.5 │ 20:17     │\n",
-      "│ 2024-09-23   │       1215.4 │          5002.7 │ 20:15     │\n",
-      "│ 2024-09-09   │       1208.2 │          5006.0 │ 20:08     │\n",
-      "│ 2024-08-22   │       1208.1 │          5003.4 │ 20:08     │\n",
-      "│ 2024-08-13   │       1207.0 │          5012.1 │ 20:07     │\n",
+      "│ 2025-03-13   │       1126.2 │          5005.3 │ 18:46     │\n",
+      "│ 2025-06-19   │       1145.0 │          5002.6 │ 19:05     │\n",
+      "│ 2025-03-04   │       1147.9 │          5000.0 │ 19:08     │\n",
+      "│ 2025-05-14   │       1149.0 │          5008.8 │ 19:09     │\n",
+      "│ 2025-04-04   │       1150.8 │          5003.9 │ 19:11     │\n",
+      "│ 2024-11-04   │       1151.7 │          5006.1 │ 19:12     │\n",
+      "│ 2025-01-25   │       1156.4 │          5008.6 │ 19:16     │\n",
+      "│ 2025-01-07   │       1164.2 │          5005.5 │ 19:24     │\n",
+      "│ 2025-01-23   │       1165.0 │          5002.6 │ 19:25     │\n",
+      "│ 2025-02-20   │       1165.0 │          5007.0 │ 19:25     │\n",
       "├──────────────┴──────────────┴─────────────────┴───────────┤\n",
       "│ 10 rows                                         4 columns │\n",
       "└───────────────────────────────────────────────────────────┘\n",
@@ -194,7 +179,7 @@
     "        and machine_type = 'rowerg'\n",
     "        and \"Distance (meters)\" >= 5000\n",
     "    qualify 1 = rank() over(partition by \"date\" order by \"Number\")\n",
-    "    order by \"Time (seconds)\" desc\n",
+    "    order by \"Time (seconds)\" \n",
     "    limit 10\n",
     "\n",
     "\"\"\"\n",
